Service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  labels:
    app: wisecow
spec:
  type: NodePort
  ports:
  - port: 4499
    targetPort: 4499
    nodePort: 31000
  selector:
    app: wisecow
